<resources>
    <string name="app_name">Kpple</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_forgot_pass">¿Forgot password?</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="sign_out">Sign Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signed_out">Signed Out</string>
    <string name="displayname">Enter Display Name</string>
    <string name="save">Save</string>
    <string name="msj">Do you have a code? Put in here</string>
    <string name="newCode">Generate a new CODE</string>
    <string name="drinkcoffee">Drink Coffee</string>
    <string name="movies">Movies</string>
    <string name="party">Party</string>
    <string name="park">Park</string>
    <string name="video_Call">Video Call</string>
    <string name="swinger">Swinger</string>
    <string name="trio">Trio</string>
    <string name="vouyerism">Voyeurismo</string>
    <string name="sadism">Sadismo</string>
    <string name="Fetichism">Fetichismo</string>
    <string name="masoquism">Masoquismo</string>
    <string name="exhibicionism">Exhibicionismo</string>
    <string name="Find">Buscar</string>
    <string name="notif_title">Notificacion Kpple like</string>
    <string name="notif_body">Notificacion Kpple Me gusta en Tu publicacion</string>
    <string name="notif_titleD">Notificacion Kpple Deslike</string>
    <string name="notif_bodyD">Notificacion Kpple No le gusta en Tu publicacion</string>

    <string-array name="Intereses">
        <item>Trio</item>
        <item>Voyeurismo</item>
        <item>Sadismo</item>
        <item>Fetichismo</item>
        <item>Masoquismo</item>
        <item>Exhibicionismo</item>
    </string-array>

    <string-array name="Hobbies">
        <item>Tomar Café</item>
        <item>Películas</item>
        <item>Fiesta</item>
        <item>Parque</item>
        <item>Videollamada</item>
        <item>Swinger</item>
    </string-array>


    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="facebook_app_id">493604694437736</string>
    <!--                            -->

    <!-- Strings Dialog URLVIDEO-->
    <string name="dialog_textview_url">Url del video:</string>
    <string name="dialog_hint_url">Introduce la url..</string>
    <string name="dialog_button_url">Aceptar</string>
    <string name="dialog_buttonEx_url">Cancelar</string>
    <!--                -->

    <!-- Strings Dialog URLVIDEO-->
    <string name="tab_main_home">Home</string>
    <string name="tab_main_info">Info</string>
    <string name="tab_main_post">Posts</string>
    <string name="tab_main_gallery">Gallery</string>
    <!-- -->

    <!-- Strings Dialog URLVIDEO-->
    <string name="tab_main_people">Personas</string>
    <string name="tab_main_hobbies">Hobbies</string>
    <string name="tab_main_interest">Interest</string>
    <!--  -->


    <!-- Strings de Login y Registro -->
    <string name="button_register">Register</string>
    <string name="sign_here">Already registered? Sign in here</string>
    <string name="title_activity_profile">activity_profile</string>
    <string name="text_o">Ó</string>
    <string name="sign_up">Sign Up</string>
    <!--                           -->

    <!-- Strings del menú Superior -->
    <string name="logout_item_menu">Cerrar Sesión</string>
    <string name="profile_item_menu">Mi Perfil</string>
    <string name="title_activity_register">Sign up</string>
    <!--                           -->

    <!-- Srtring de publicacion POST -->
    <string name="hint_postActivity">Escribe tu publicación...</string>
    <string name="title_post_activity">Crear Publicación</string>

    <!--                             -->


    <!-- Strings del fragment Info   -->
    <string name="info_profile_name">Cargando...</string>
    <string name="info_label_name">Nombre:</string>
    <string name="info_label_country">País:</string>
    <string name="info_text_country"></string>
    <string name="info_label_city">Ciudad:</string>
    <string name="info_text_city"></string>
    <string name="info_label_sex">Sex:</string>
    <string name="info_text_sex"></string>
    <string name="info_label_languaje">Idioma:</string>
    <string name="info_text_languaje"></string>
    <string name="info_label_birthdate">Fecha de Nacimiento:</string>
    <string name="info_text_birthdate"></string>
    <string name="info_profile_hobbies">Hobbies</string>
    <string name="info_profile_interest">Interéses</string>
    <!--                             -->

    <string name="post_profile">Posts</string>

    <string name="gallery_profile">Gallery</string>

    <string name="groups_profile">Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_profile">Profile</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_interest">Interests</string>
    <string name="tab_hobbies">Hobbies</string>
    <string name="tab_code">Code</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="countries">
        <item>Colombia</item>
        <item>Estados Unidos</item>
        <item>España</item>
    </string-array>

    <string-array name="cities">
        <item>Bogota</item>
        <item>Washington</item>
        <item>Madrid</item>
    </string-array>

    <string-array name="languages">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string name="title_activity_tab_prinpal_contoller">TabPrinpalContoller</string>
    <string name="title_activity_friend_profile">FriendProfile</string>
    <string name="tab_couple_post">Post</string>
    <string name="tab_couple_gallery">Gallery</string>
    <string name="tab_couple_info">Info</string>
    <string name="title_activity_tab_principal_controller">TabPrincipalController</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="card_textview_likes">Likes:</string>
    <string name="card_textview_likes_values">15</string>
    <string name="name_card">Jhon Watson</string>
    <string name="card_post">Post:</string>
    <string name="card_post_values">5</string>
    <string name="label_comunity_name">ComunityName</string>
    <string name="title_activity_find">Find</string>
    <string name="title_activity_find_people">FindPeople</string>
    <string name="title_activity_find_nombre">FindNombre</string>
    <string name="title_activity_tab_community_controller">TabCommunityController</string>
    <string name="comment_text_comments">Hola, es mi primer comentario.</string>
    <string name="txt_hora_comment">10:00</string>
    <string name="title_activity_notify">NotifyActivity</string>


    <!--                             -->
</resources>
