<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/imagecardcommunity"
            android:layout_width="152dp"
            android:layout_height="111dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imageviewprofile" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:text="@string/card_textview_likes"
            app:layout_constraintBaseline_toBaselineOf="@+id/card_text_like_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toEndOf="@+id/imagecardcommunity"
            tools:text="@string/card_textview_likes" />

        <TextView
            android:id="@+id/card_text_like_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="24dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/card_text_post_values"
            app:layout_constraintVertical_bias="0.6"
            tools:text="@string/card_textview_likes_values" />


        <TextView
            android:id="@+id/card_textview_name"
            android:layout_width="153dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/imagecardcommunity"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_card" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:text="@string/card_post"
            app:layout_constraintBaseline_toBaselineOf="@+id/card_text_post_values"
            app:layout_constraintStart_toEndOf="@+id/imagecardcommunity"
            tools:text="@string/card_post" />

        <TextView
            android:id="@+id/card_text_post_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/card_post_values"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503"
            tools:text="@string/card_post_values" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>