<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TabPrincipalController">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

            <ImageButton
                android:id="@+id/btn_find"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:color="@color/white"
                android:tint="@color/browser_actions_bg_grey"
                app:srcCompat="@android:drawable/ic_search_category_default" />

            <ImageButton
                android:id="@+id/btn_chat"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:color="@color/white"
                android:tint="@color/browser_actions_bg_grey"
                app:srcCompat="@android:drawable/sym_action_chat" />

            <ImageButton
                android:id="@+id/btn_request"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|bottom"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:color="@color/white"
                android:tint="@color/browser_actions_bg_grey"
                app:srcCompat="@android:drawable/btn_star" />


        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorAccent">


            <android.support.design.widget.TabItem
                android:id="@+id/tabProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/iconm_home"
                android:text="@string/tab_main_home" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabActivities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/iconm_post"
                android:text="@string/tab_main_post" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabHobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/iconm_gallery"
                android:text="@string/gallery_profile" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabComunities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/iconm_groups"
                android:text="@string/groups_profile" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/iconm_info"
                android:text="@string/tab_main_info" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>