<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/trio"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcSwTrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/txtMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/vouyerism"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcSwVouyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtMovies"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/txtParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:text="@string/sadism"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcSwSadism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtParty"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/txtPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="208dp"
        android:text="@string/Fetichism"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcSwFetichism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtPark"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/txtVideoCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="277dp"
        android:text="@string/masoquism"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcSwMasoquism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtVideoCall"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <TextView
        android:id="@+id/txtSwinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="346dp"
        android:text="@string/exhibicionism"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <io.ghyeok.stickyswitch.widget.StickySwitch
        android:id="@+id/stcExhibicionism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtSwinger"
        app:ss_animationDuration="600"
        app:ss_animationType="line"
        app:ss_iconPadding="14dp"
        app:ss_iconSize="6dp"
        app:ss_leftIcon="@drawable/ic_clear"
        app:ss_leftText="No"
        app:ss_rightIcon="@drawable/ic_add"
        app:ss_rightText="Yes"
        app:ss_selectedTextSize="14sp"
        app:ss_sliderBackgroundColor="@color/colorAccent"
        app:ss_switchColor="@color/colorSecondary"
        app:ss_textColor="@color/colorPrimary"
        app:ss_textSize="12sp" />

    <Button
        android:id="@+id/btnSaveInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stcExhibicionism"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />
</RelativeLayout>